<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">MusicBee Remote</string>
    <string name="main_button_mute_description">When pressed it toggles the volume mute.</string>
    <string name="main_button_repeat_description">When pressed it changes the repeat (all/none).
</string>
    <string name="main_button_shuffle_description">When pressed it changes the shuffle mode (on/off).
</string>
    <string name="main_button_last_fm_description">When pressed it enables/disables the last.fm
		functionality.</string>
    <string name="main_button_previous_description">When pressed it plays the previous track</string>
    <string name="main_button_play_pause_description">When pressed either it starts playing a track or
		pauses it if it
		is already playing.
</string>
    <string name="main_button_stop_description">When pressed it stops the playback.</string>
    <string name="main_button_next_description">When pressed it plays the next track.</string>
    <string name="main_image_view_cover_description">It displays the album cover for the current track.
</string>
    <string name="main_menu_settings">Settings</string>
    <string name="settings_connection_hostname">Hostname or IP</string>
    <string name="settings_connection">Connection Settings</string>
    <string name="settings_key_hostname">server_hostname</string>
    <string name="settings_key_port">server_port</string>
    <string name="settings_connection_port">Port:</string>
    <string name="settings_miscellaneous">Miscellaneous</string>
    <string name="settings_key_reduce_volume">reduce_volume_on_ring</string>
    <string name="settings_miscellaneous_reduce_volume">Reduce on Incoming</string>
    <string name="settings_miscellaneous_reduce_volume_description">Reduce the player volume on incoming call</string>
    <string name="notification_check_network_settings">Check hostname or Port</string>
    <string name="main_menu_title_playlist">Now Playing</string>
    <string name="notification_no_lyrics">No Lyrics Found</string>
    <string name="main_label_track_title">MusicBee Remote Control</string>
    <string name="main_label_artist">Konstantinos Paparas</string>
    <string name="main_label_duration_current">01:03</string>
    <string name="main_label_duration_total">04:11</string>
    <string name="main_label_date">© 2012</string>
    <string name="main_label_album">Copyright</string>
    <string name="main_button_connection_description">Displays the connection status. Also if the
		connection is not active it initiates it when pressed.</string>
    <string name="info_service_description">This service is responsible for the communication
		of the application
		with the plugin.
</string>
    <string name="application_description">Remote Control Application for MusicBee</string>
    <string name="main_menu_title_lyrics">Lyrics</string>
    <string name="main_menu_title_share">Share</string>
    <string name="main_menu_title_settings">Settings</string>
    <string name="string_value_lyrics">Lyrics</string>
    <string name="string_value_now_playing">Now Playing</string>
    <string name="preferences_category_about">About MusicBee Remote</string>
	<string name="preferences_about_version">MusicBee Remote Version</string>
	<string name="alert_invalid_port_number">The valid port range is from 1 to 65535</string>
	<string name="alert_invalid_range">"Invalid Range"</string>
	<string name="notification_connection_timeout">Connection timed out</string>
	<string name="aboutview_musicbee_remote">About MusicBee Remote</string>
	<string name="notification_not_allowed">Client is not allowed</string>
	<string name="now_playing_search">Search</string>
	<string name="now_playing_search_hint">Search for a track</string>
	<string name="notification_plugin_out_of_date">Your plugin is out of date, please update.</string>
    <string name="dialog_application_setup">The connection settings appear empty. Would you like to setup up
        the application now? </string>
    <string name="dialog_application_setup_title">Setup</string>
    <string name="dialog_application_setup_positive">Setup Now</string>
    <string name="dialog_application_setup_negative">Cancel</string>
    <string name="preferences_open_source">open_source</string>
    <string name="drawer_connection_status_off">Offline</string>
    <string name="drawer_connection_status_on">Authenticating</string>
    <string name="drawer_connection_status_active">Connected</string>
    <string name="settings_dialog_hint_name">Computer name</string>
    <string name="settings_dialog_hint_host">Hostname / IP</string>
    <string name="settings_dialog_hint_port">Port number</string>
    <string name="main_lfm_content">The last fm love button</string>
    <string name="main_button_lfm_love_description">Used to change the love state of the playing track</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ui_drawer_menu_home">Home</string>
    <string name="ui_drawer_menu_search">Search</string>
    <string name="ui_drawer_menu_np">Now Playing List</string>
    <string name="ui_drawer_menu_lyrics">Lyrics</string>
    <string name="ui_drawer_menu_settings">Settings</string>
    <string name="ui_drawer_menu_version">MusicBee Remote %1$s</string>
    <string name="artist_placeholder">Artistname</string>
    <string name="title_placeholder">Titleplaceholder</string>
    <string name="connection_manager_scan">Scan</string>
    <string name="connection_manager_add">Add</string>
    <string name="settings_dialog_add">Add</string>
    <string name="connection_manager_title">Connection Manager</string>
    <string name="settings_key_array">settings_array</string>
    <string name="placeholer_computer_name">Computer Name</string>
    <string name="place_holder_ip">192.168.100.10</string>
    <string name="placeholder_port">3565</string>
    <string name="connection_default_description">Represents if this connection is the default selected connection
    </string>
    <string name="connectivity_manager_default">Set default</string>
    <string name="connectivity_manager_edit">Edit</string>
    <string name="connectivity_manager_delete">Delete</string>
    <string name="connectivity_manager_header">Manage Connection</string>
    <string name="settings_version_number">v%1$s</string>
    <string name="settings_oss_license">Open source licenses</string>
    <string name="settings_version">settings_version</string>
    <string name="preferences_key_connection_manager">manage_connections</string>
    <string name="progress_scanning">Scanning…</string>
    <string name="progress_scanning_message">Wait while scanning for a remote host</string>
    <string name="search_msg_album_not_found">No albums found for the current search</string>
    <string name="search_msg_artist_not_found">No artist found for the current search</string>
    <string name="search_msg_genre_not_found">No genres found for the current search</string>
    <string name="search_msg_track_not_found">No track found for the current search</string>
    <string name="search_context_header">Actions</string>
    <string name="search_context_queue_next">Queue Next</string>
    <string name="search_context_queue_last">Queue Last</string>
    <string name="search_context_play_now">Play Now</string>
    <string name="search_context_get_artists">Get Artists</string>
    <string name="search_context_get_albums">Get albums</string>
    <string name="search_context_get_tracks">Get Tracks</string>
    <string name="con_man_no_wifi">This service is available only on a wifi connection</string>
    <string name="con_man_not_found">A remote service could not be found</string>
    <string name="con_man_success">Service successfully found</string>
    <string name="settings_key_default_index">mbrc_default_settings</string>
    <string name="notification_settings_stored">The specified settings already exist.</string>
    <string name="album_placeholder">album title</string>
    <string name="settings_search_default_key">search_click_default</string>
    <string name="settings_manage_connections">Manage Connections</string>
    <string name="settings_search_default_title">Search list default action</string>
    <string name="settings_search_default_summary">Set the default press action for the search list.</string>
    <string name="search_click_default_value">last</string>
    <string name="settings_key_notification_control">set_show_notification</string>
    <string name="settings_sum_notification_control">Show a notification control widget</string>
    <string name="settings_title_notification_control">Notification Control</string>
    <string name="settings_key_last_update_check">last_update_check</string>
    <string name="settings_title_license">License</string>
    <string name="settings_key_license">mbrc_license</string>
    <string name="main_menu_help">Help</string>
    <string name="settings_key_last_version_run">last_version_run</string>
    <string name="dialog_upgrade_negative">Ok</string>
    <string name="dialog_upgrade_title">Welcome</string>
    <string name="nav_home">Now Playing</string>
    <string name="nav_library">Library</string>
    <string name="nav_currentqueue">Current Queue</string>
    <string name="nav_lyrics">Lyrics</string>
    <string name="nav_playlists">Playlists</string>
    <string name="playlist_list_play_now">Play Now</string>
    <string name="playlist_list_get">Get Playlist</string>
    <string name="mqueue_next">next</string>
    <string name="mqueue_last">last</string>
    <string name="mqueue_now">now</string>
    <string name="search_context_playlist">Add to playlist</string>
    <string name="mbrc_actionbar_love">Love</string>
    <string name="mbrc_library_sync">Library data sync</string>
    <string name="mbrc_libary_sync_msg">Sync in progress, %1$d of %2$d</string>
    <string name="mbrc_library_sync_complete">Sync complete</string>

</resources>