<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_playlist"
        android:icon="@drawable/ic_action_playlist"
        android:showAsAction="always"
        android:title="@string/main_menu_title_playlist">
    </item>
    <item
        android:id="@+id/main_menu_lyrics"
        android:icon="@drawable/ic_action_lyrics"
        android:showAsAction="always"
        android:title="@string/main_menu_title_lyrics">
    </item>
    <item
        android:id="@+id/main_menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/main_menu_settings">
    </item>
    <item
        android:id="@+id/main_menu_share"
        android:title="@string/main_menu_title_share">
    </item>

</menu>