<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/ui_track_info_background"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:textSize="@dimen/mbrc_title_text_size"
            android:id="@+id/track_title"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_placeholder"
            android:id="@+id/track_album"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_placeholder"
            android:id="@+id/track_artist"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_placeholder"
            android:id="@+id/track_year"/>
</LinearLayout>